[package]
name = "roa"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.8.12", features = ["credentials-login"] }
aws-sdk-ec2 = "1.199.0"
clap = { version = "4.5.53", features = ["derive", "env"] }
tokio = { version = "1.48.0", features = ["full"] }
base64 = "0.22.1"
home = "0.5.12"
dotenvy = "0.15.7"
